--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ rv-brand = "ReVanced Extended"
 [YouTube]
 build-mode = "apk"
 excluded-patches = "custom-branding-icon-afn-blue custom-branding-icon-afn-red custom-branding-icon-revancify remove-player-button-background"
-included-patches = "materialyou"
+included-patches = ""
 version = "auto"
 exclusive-patches = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
