--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ rv-brand = "ReVanced Extended"
 
 [YouTube]
 build-mode = "apk"
-excluded-patches = "custom-branding-icon-afn-blue custom-branding-icon-afn-red custom-branding-icon-revancify remove-player-button-background"
+excluded-patches = "custom-branding-icon-afn-blue custom-branding-icon-afn-red custom-branding-icon-revancify"
 included-patches = ""
 version = "auto"
 exclusive-patches = false
